<resources>
    <string name="app_name">Show Pro</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="user">Username :</string>
    <string name="pass">Password :</string>
    <string name="login">Log in</string>
    <string name="guest">Guest</string>
    <string name="register">Register</string>
    <string name="register_link">Not a member? Sign up now.</string>
    <string name="login_link">Already registered! Login Me.</string>
    <string name="name">Name :</string>
    <string name="surnanme">Surname :</string>
    <string name="address">Address :</string>
    <string name="email">Email :</string>
    <string name="save">Register</string>
    <string name="title_activity_detail_promotion">Map</string>

    <string name="about">ShowPro เป็นแอพพลิเคชั่นเกี่ยวกับการแจ้งเตือนข่าวสารต่างๆที่เกี่ยวกับโปรโมชั่นและสามารถแสดงแผนที่สาขา เพื่อเพิ่มความสะดวกสบายแก่ผู้ใช้</string>
    <string name="title_activity_location_maps">Map</string>
</resources>
