<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pbru.yaemsak.chonlakan.showpro.MainActivity"
    android:background="@drawable/wall20">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#82ffffff"
        android:layout_marginTop="40dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:id="@+id/imageView"
            android:src="@drawable/logob"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView8"
                android:src="@drawable/user1"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:hint="@string/username"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:id="@+id/imageView9"
                android:src="@drawable/pss1"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="clickLoin"
            android:text="@string/login"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textSize="16dp"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:textSize="16dp"
            android:onClick="clickGuest"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="1dp" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_link"
            android:textSize="18sp"
            android:onClick="clickRegister"
            android:id="@+id/register_link"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="17dp"/>

</RelativeLayout>