<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pbru.yaemsak.chonlakan.showpro.RegisterActivity"
    android:background="@drawable/wall20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:onClick="clickSaveData"
        android:text="@string/save"
        android:id="@+id/button4"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView2"
        android:background="#82ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:id="@+id/textView3"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:id="@+id/textView4"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textView5"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surnanme"
                    android:id="@+id/textView6"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="2dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:id="@+id/textView7"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText7"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:id="@+id/textView8"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:layout_weight="2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_link"
        android:id="@+id/login_link"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:textSize="18dp" />

</RelativeLayout>
